<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="28pt"
            android:layout_height="26pt"
            android:layout_gravity="right"

            android:backgroundTint="#00196F49"
            android:scaleType="fitXY"
            android:src="@drawable/settings_icon"
            app:tint="#4CAF50" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#196F49"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingTop="8pt"
                android:textAlignment="center"
                android:textColorHint="#A0A0A0" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#196F49"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:hint="@string/height_et"
                android:inputType="number"
                android:paddingTop="8pt"
                android:textAlignment="center"
                android:textColorHint="#A0A0A0" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#196F49"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:hint="@string/weight_et"
                android:inputType="number"
                android:paddingTop="8pt"
                android:textAlignment="center"
                android:textColorHint="#A1A1A1" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#196F49"
                android:backgroundTintMode="src_in"
                android:breakStrategy="simple"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:hint="@string/date_birth_et"
                android:inputType="date"
                android:paddingTop="8pt"
                android:textAlignment="center"
                android:textColorHint="#A1A1A1" />
        </LinearLayout>

        <CalendarView
            android:id="@+id/cvDateBirth"
            style="@android:style/Widget.DeviceDefault.CalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedMonthDateColor="#4CAF50"
            android:selectedWeekBackgroundColor="#4CAF50"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#4CAF50"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>