<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llPfcCounters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llProtein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvProtein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="@string/protein_tv" />

                <TextView
                    android:id="@+id/tvProteinCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="/"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbProtein"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/progress_drawable_pfc"
                android:progress="30"/>

            <LinearLayout
                android:id="@+id/llFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="@string/fat_tv" />

                <TextView
                    android:id="@+id/tvFatCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="/"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbFat"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/progress_drawable_pfc"
                android:progress="30"
                />

            <LinearLayout
                android:id="@+id/llCarbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCarbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="@string/carbs_tv" />

                <TextView
                    android:id="@+id/tvCarbsCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="/"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbCarbs"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/progress_drawable_pfc"
                android:progress="30"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPfcInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etProtein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:gravity="center"
                android:hint="@string/protein_et"
                android:inputType="number" />

            <EditText
                android:id="@+id/etFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:gravity="center"
                android:hint="@string/fat_et"
                android:inputType="number" />

            <EditText
                android:id="@+id/etCarbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/candara"
                android:gravity="center"
                android:hint="@string/carbs_et"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btAddPfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#358038"/>
</androidx.constraintlayout.widget.ConstraintLayout>