<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".StepsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStepsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candara"
            android:text="@string/steps_today_et"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvStepsToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candara"
            android:gravity="center"
            android:text="3390"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvOf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candara"
            android:gravity="center"
            android:text="@string/of_et"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvStepsAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candara"
            android:gravity="center"
            android:text="10000"
            android:textColor="@color/black"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10pt"
        android:paddingRight="10pt">

        <ProgressBar
            android:id="@+id/pbSteps"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5pt"
            android:paddingBottom="5pt"
            android:progress="33"
            android:progressBackgroundTintMode="multiply"
            android:progressDrawable="@drawable/progress_drawable_steps" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#B3DAC8"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/checkmark"
                    android:layout_width="20pt"
                    android:layout_height="20pt"
                    android:paddingLeft="5pt"
                    android:paddingRight="5pt"
                    android:src="@drawable/checkmark_icon"
                    app:tint="#239D66" />

                <TextView
                    android:id="@+id/tvAchievement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/candara"
                    android:text="@string/achiv_1_et" />

                <TextView
                    android:id="@+id/tvDayAchievement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/candara"
                    android:text="0" />

                <TextView
                    android:id="@+id/tvDayAchievement2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/candara"
                    android:text="@string/achiv_2_et" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#E5E5E5"
        app:cardCornerRadius="20dp" />


</LinearLayout>